fix(server): remove DebugTimeIssues functionality
